1Comportamentos testados: criação válida das entidades (Aluno, Disciplina, Turma, Matrícula, OfertaDisciplina, PeriodoLetivo) 2Cobertura atingida: cerca de 93% no pacote de domínio 3impedir que uma Matrícula seja criada sem um Aluno ou uma OfertaDisciplina válidos, garantindo a integridade dos dados acadêmicos.