@@ -1,26 +1,43 @@
 package br.edu.sistemaacademico.domain;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 
-public final class Aluno {
-    private final String registroAcademico;
+public class Aluno {
+
+    private final String identificadorAcademico;
     private final String nome;
     private String email;
+
     private final List<Matricula> matriculas = new ArrayList<>();
 
-    public Aluno(String registroAcademico, String nome, String email) {
-        this.registroAcademico = validarTexto(
-                registroAcademico,
-                "O registro acadêmico é obrigatório."
-        );
-        this.nome = validarTexto(nome, "O nome do aluno é obrigatório.");
-        alterarEmail(email);
+    public Aluno(
+            String identificadorAcademico,
+            String nome,
+            String email) {
+
+        if (identificadorAcademico == null ||
+                identificadorAcademico.isBlank()) {
+            throw new IllegalArgumentException(
+                    "O identificador acadêmico é obrigatório."
+            );
+        }
+
+        if (nome == null || nome.isBlank()) {
+            throw new IllegalArgumentException(
+                    "O nome é obrigatório."
+            );
+        }
+
+        this.identificadorAcademico = identificadorAcademico;
+        this.nome = nome;
+
+        setEmail(email);
     }
 
-    public String getRegistroAcademico() {
-        return registroAcademico;
+    public String getIdentificadorAcademico() {
+        return identificadorAcademico;
     }
 
     public String getNome() {
@@ -32,60 +49,46 @@ public final class Aluno {
     }
 
     public void setEmail(String email) {
-        alterarEmail(email);
+
+        if (email == null || email.isBlank()) {
+            throw new IllegalArgumentException(
+                    "O e-mail é obrigatório."
+            );
+        }
+
+        if (!email.matches("^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$")) {
+            throw new IllegalArgumentException(
+                    "O e-mail informado é inválido."
+            );
+        }
+
+        this.email = email;
     }
 
     public List<Matricula> getMatriculas() {
-        return List.copyOf(matriculas);
+        return Collections.unmodifiableList(matriculas);
     }
 
-    void validarNovaMatricula(OfertaDisciplina oferta) {
-        boolean jaAprovado = matriculas.stream()
-                .anyMatch(matricula -> matricula.foiAprovadoEm(oferta.getDisciplina()));
+    public void adicionarMatricula(Matricula matricula) {
 
-        if (jaAprovado) {
-            throw new IllegalStateException(
-                    "O aluno já foi aprovado nesta disciplina."
+        if (matricula == null) {
+            throw new IllegalArgumentException(
+                    "A matrícula não pode ser nula."
             );
         }
-    }
 
-    void registrarMatricula(Matricula matricula) {
-        matriculas.add(matricula);
-    }
-
-    private void alterarEmail(String email) {
-        if (email == null || !email.matches("^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$")) {
-            throw new IllegalArgumentException("O e-mail do aluno é inválido.");
+        if (!matriculas.contains(matricula)) {
+            matriculas.add(matricula);
         }
-        this.email = email.trim();
-    }
-
-    private static String validarTexto(String valor, String mensagem) {
-        if (valor == null || valor.isBlank()) {
-            throw new IllegalArgumentException(mensagem);
-        }
-        return valor.trim();
-    }
-
-    @Override
-    public boolean equals(Object outro) {
-        if (this == outro) {
-            return true;
-        }
-        if (!(outro instanceof Aluno aluno)) {
-            return false;
-        }
-        return registroAcademico.equals(aluno.registroAcademico);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(registroAcademico);
     }
 
     @Override
     public String toString() {
-        return registroAcademico + " - " + nome;
+        return "Aluno{" +
+                "identificadorAcademico='" +
+                identificadorAcademico + '\'' +
+                ", nome='" + nome + '\'' +
+                ", email='" + email + '\'' +
+                '}';
     }
 }
